# SiCom

./: CMakeLists.txt  LogEntry.h  SerialConfig.h  SerialManager.cpp  SerialManager.h  dataconvertor.cpp  dataconvertor.h  filemanager.cpp  filemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sendscheduler.cpp  sendscheduler.h
